# phc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __main__.py  config.yaml.template
src/commands/: ca.py  git.py  machine.py  proxmox.py  test.py
src/generic/: config.py  utils.py
src/objects/: __init__.py  ca.py  dns.py  git.py  machine.py  proxmox.py
src/phc/: __main__.py
src/phc/commands/: __init__.py  git.py  machine.py  proxmox.py  test.py
src/phc/generic/: errors.py
src/phc/objects/: ca.py  ipam.py
