[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phc"
version = "1.0.1"
authors = [
  { name="Vincent HURIAUX", email="vincent.huriaux@stormshield.eu" },
]
description = "Proxmox Home Cloud"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]
dependencies = [
  "argparse",
  "requests"
]

[project.urls]
Homepage = "https://github.com/NogradThGin/phc"
Issues = "https://github.com/NogradThGin/phc/issues"